Introduce upload identity image endpoint.
